// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button With Icon 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  <i
    aria-hidden="true"
    className="right arrow icon"
  />
   
</button>
`;

exports[`Storyshots Button With Icon and Text 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  Continue 
  <i
    aria-hidden="true"
    className="right arrow icon"
  />
   
</button>
`;

exports[`Storyshots Button With Primary Color 1`] = `
<button
  className="ui primary button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  Primary
   
</button>
`;

exports[`Storyshots Button With Secondary Color 1`] = `
<button
  className="ui secondary button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  Secondary
   
</button>
`;

exports[`Storyshots Button With some emoji 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  <span
    aria-label="emojis"
    role="img"
  >
    😀 😎 👍 💯
  </span>
   
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  Hello World
   
</button>
`;

exports[`Storyshots Footer Datahub Footer 1`] = `
<div
  className="css-1bj7z6h"
>
  <div
    className="css-uajphc"
  >
    <div
      className="css-1tfdju4"
    >
      <div
        className="ui container"
      >
        <div
          className="ui grid"
        >
          <div
            className="row"
          >
            <div
              className="four wide column"
            >
              <h4
                className="css-106dsda"
              >
                First Columns
              </h4>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Data blog 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 2 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 3 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 4 
              </a>
            </div>
            <div
              className="four wide column"
            >
              <h4
                className="css-106dsda"
              >
                Second Columns
              </h4>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Data blog 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 2 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 3 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 4 
              </a>
            </div>
            <div
              className="four wide column"
            >
              <h4
                className="css-106dsda"
              >
                Third Columns
              </h4>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Data blog 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 2 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 3 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 4 
              </a>
            </div>
            <div
              className="four wide column"
            >
              <h4
                className="css-106dsda"
              >
                Fourth Columns
              </h4>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Data blog 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 2 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 3 
              </a>
              <a
                className="css-1j6tgbo"
                href="http://devinit.org/#!/blog"
              >
                 Link 4 
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1ecftt0"
  >
    <div
      className="row"
    >
      <div
        className="ui center aligned container"
      >
        <div
          className="sixteen wide column"
        >
          <a
            className="css-1zicc8"
            href="https://twitter.com/devinitorg"
          >
            <i
              aria-hidden="true"
              className="twitter icon"
            />
          </a>
          <a
            className="css-1zicc8"
            href="https://twitter.com/devinitorg"
          >
            <i
              aria-hidden="true"
              className="facebook f icon"
            />
          </a>
          <a
            className="css-1zicc8"
            href="https://twitter.com/devinitorg"
          >
            <i
              aria-hidden="true"
              className="youtube play icon"
            />
          </a>
          <a
            className="css-1zicc8"
            href="https://twitter.com/devinitorg"
          >
            <i
              aria-hidden="true"
              className="flickr icon"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="lightBlack css-uajphc"
  >
    <div
      className="row"
    >
      <div
        className="ui container"
      >
        <div
          className="css-1i088ce"
        >
          <p>
            © Development Initiatives 2017. Development Initiatives is the trading name of DI International Ltd. Registered in England and Wales No. 05802543. Development Initiatives Poverty Research is the not-for-profit partner of DI International Ltd. Registered in England and Wales No. 06368740. Read our
            <a
              href="http://devinit.org/wp-content/uploads/2017/01/privacy_and_data_policy.pdf"
            >
              privacy policy
            </a>
            .
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Menu default 1`] = `
<div
  className="ui menu"
/>
`;

exports[`Storyshots Search Datahub Main Search 1`] = `
<div>
  <div
    className="css-1viqs2r"
  >
    <div
      className="ui container"
    >
      <h2>
        Explore by
        <span
          className="clickable"
          onClick={[Function]}
          role="button"
        >
           country
        </span>
      </h2>
    </div>
  </div>
  <div
    className="css-mv69bf"
  >
    <div
      className="ui container"
    >
      <input
        className="css-pnc7nu"
        placeholder="Type Your Country Name"
      />
      <div
        className="list css-13azwyo"
      >
        <ul
          className="css-vi44j9"
        >
          <li>
            Uganda
          </li>
          <li>
            Kenya
          </li>
          <li>
            Tanzania
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Year Slider Datahub Year Slider 1`] = `
<div
  className="css-dggfml"
>
  <span
    className="bubble css-1ujcf02"
  >
    1
  </span>
  <span
    className="css-2rxq9m"
  >
    100
  </span>
  <input
    className="input low css-13v2tq9"
    max="100"
    min="1"
    onChange={[Function]}
    step="1"
    type="range"
    value="100"
  />
  <span
    className="bubble css-2q5yx4"
  >
    100
  </span>
</div>
`;
